[package]
name = "wiktionary_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.12.5", features = ["json"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
regex = "1.10.5"
rubit_api_db = { path = "C:/Users/Noah3/Code/rubit_api/db", package = "db" }
html-escape = "0.2.13"
scraper = "0.19.1"
tokio = { version = "1", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
